# InfiniteFetch

./: .gitignore  CMakeLists.txt  Makefile  README.md  assembler.cpp  assembler.h  downloader.cpp  downloader.h  infetch.h  main.cpp  seed_example.xml  seed_parser.cpp  seed_parser.h  sha256.cpp  sha256.h  vars.h
